crates/reinhardt-core/macros/tests/ui/user/fail/missing_password_hash.stderr
error: #[user] requires a field for 'password_hash'. Add a field named 'password_hash' or annotate a field with #[user_field(password_hash)]
 --> tests/ui/user/fail/missing_password_hash.rs:8:1
  |
8 | #[user(hasher = Argon2Hasher, username_field = "email")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `user` (in Nightly builds, run with -Z macro-backtrace for more info)
